<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtBI1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/BI1"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtMat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBI1"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/txtProv1"
        android:layout_marginEnd="70dp"
        android:text="@string/Mat1"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txtProv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBI1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Prov1"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txtTrab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBI1"
        android:layout_alignStart="@id/txtProv1"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:text="@string/Trab1"
        android:textSize="14sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edtProv1"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_below="@id/txtProv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:maxLength="2" />

    <Spinner
    android:id="@+id/Spinner01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/txtMat1"
    android:layout_marginTop="10dp"
    android:layout_toStartOf="@id/edtProv1"
    android:layout_marginEnd="70dp"
    />




</RelativeLayout>


